7. Aplicación #4 Lista de deseos - IONIC 2 App - Video 8

--- a/05_deseos/src/pages/terminados/terminados.component.html
+++ b/05_deseos/src/pages/terminados/terminados.component.html
@@ -1,9 +1,9 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Lista de pendientes</ion-title>
+        <ion-title>Terminados</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <h2>Lista de pendientes!</h2>
+    <h2>Terminados!!!</h2>
 </ion-content>
