--- a/05_deseos/src/pages/pendientes/pendientes.component.html
+++ b/05_deseos/src/pages/pendientes/pendientes.component.html
@@ -1,9 +1,41 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar color="primary">
         <ion-title>Lista de pendientes</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
     <h2>Lista de pendientes!!!</h2>
+
+    <ion-card *ngFor="let lista of _listaDeseos.listas">
+        <ion-item>
+            <button ion-button color="primary">Secondary</button>
+        </ion-item>
+
+        <h2>{{ lista.nombre }}</h2>
+        <ion-list>
+            <ion-item>
+                <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon> Tetris
+            </ion-item>
+            <ion-item>
+                <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon> Tetris
+            </ion-item>
+            <ion-item>
+                <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon> Tetris
+            </ion-item>
+        </ion-list>
+    </ion-card>
+
+    <!-- <ul>
+        <li *ngFor="let lista of _listaDeseos.listas">
+            {{ lista.nombre }}
+        </li>
+    </ul> -->
+
+    <ion-fab right bottom>
+        <button ion-fab color="primary" (click)="irAgregar()">
+            <ion-icon ios="ios-add" md="md-add"></ion-icon>
+        </button>
+    </ion-fab>
+
 </ion-content>
