--- a/05_deseos/src/pages/agregar/agregar.component.html
+++ b/05_deseos/src/pages/agregar/agregar.component.html
@@ -20,4 +20,10 @@
         </ion-card-content>
         <button ion-button>Guardar</button>
     </ion-card>
+
+    <ion-card>
+        <!-- Itemas-->
+    </ion-card>
+
+    <button ion-button icon-left-class="button-block">Agregar Lista</button>
 </ion-content>
