--- a/05_deseos/src/pages/agregar/agregar.component.html
+++ b/05_deseos/src/pages/agregar/agregar.component.html
@@ -22,8 +22,11 @@
     </ion-card>
 
     <ion-card>
-        <!-- Itemas-->
+        <!-- Items-->
+
     </ion-card>
 
-    <button ion-button icon-left-class="button-block">Agregar Lista</button>
+    <button ion-button icon-left-class="button-block">
+      <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>&nbsp;Agregar Lista
+    </button>
 </ion-content>
