--- a/05_deseos/src/pages/agregar/agregar.component.html
+++ b/05_deseos/src/pages/agregar/agregar.component.html
@@ -14,16 +14,31 @@
         </ion-card-header>
         <ion-card-content>
             <ion-item>
-                <ion-label floating>Item</ion-label>
-                <ion-input type="text" [(ngModel)]="nombreItem" name="nombreItem"></ion-input>
+                <ion-label floating>Item: </ion-label>
+                <ion-input (keyup.enter)="agregar()" type="text" [(ngModel)]="nombreItem" name="nombreItem"></ion-input>
             </ion-item>
         </ion-card-content>
-        <button ion-button>Guardar</button>
+        <button ion-button class="bottom-block" (click)="agregar()">Agregar</button>
     </ion-card>
 
     <ion-card>
         <!-- Items-->
+        <ion-card-header>
+            <h3>Items agregados</h3>
+        </ion-card-header>
+        <ion-content>
 
+            <ion-list>
+                <ion-item *ngFor="let item of items; let i = index">
+                    <button ion-button color="dark" clear>{{ item.nombre }}</button>
+                    <button ion-button outline item-right color="danger">
+                      <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
+                      &nbsp;Borrar Item ({{ i }})
+                    </button>
+                </ion-item>
+            </ion-list>
+
+        </ion-content>
     </ion-card>
 
     <button ion-button icon-left-class="button-block">
