--- a/05_deseos/src/pages/agregar/agregar.component.html
+++ b/05_deseos/src/pages/agregar/agregar.component.html
@@ -17,8 +17,8 @@
                 <ion-label floating>Item: </ion-label>
                 <ion-input (keyup.enter)="agregar()" type="text" [(ngModel)]="nombreItem" name="nombreItem"></ion-input>
             </ion-item>
+            <button ion-button class="bottom-block" (click)="agregar()">Agregar</button>
         </ion-card-content>
-        <button ion-button class="bottom-block" (click)="agregar()">Agregar</button>
     </ion-card>
 
     <ion-card>
@@ -26,21 +26,21 @@
         <ion-card-header>
             <h3>Items agregados</h3>
         </ion-card-header>
-        <ion-content>
+        <ion-card-content>
 
             <ion-list>
                 <ion-item *ngFor="let item of items; let i = index">
-                    <!--<button ion-button color="dark" clear>
+                    <button ion-buttom color="dark" clear>
                       {{ item.nombre }}
                     </button>
-                     <button ion-button outline item-right color="danger">
-                      <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
-                      Borrar Item ({{ i }})</button> -->
-                    <H2>{{ i }}</H2>
+                    <button ion-button color="danger">
+                        <ion-icon ios="ios-trash" md="md-trash"></ion-icon>&nbsp;
+                        Borrar item ({{ i }})
+                    </button>
                 </ion-item>
             </ion-list>
 
-        </ion-content>
+        </ion-card-content>
     </ion-card>
 
     <button ion-button icon-left-class="button-block">
